--- a/webapp/manager/package.json
+++ b/webapp/manager/package.json
@@ -12,12 +12,16 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^5.1.0",
+    "@angular-devkit/core": "0.0.25",
+    "@angular-devkit/schematics": "0.0.46",
+    "@angular/animations": "^5.2.0",
+    "@angular/cdk": "^5.0.4",
     "@angular/common": "^5.1.0",
     "@angular/compiler": "^5.1.0",
-    "@angular/core": "^5.1.0",
+    "@angular/core": "^5.2.0",
     "@angular/forms": "^5.1.0",
     "@angular/http": "^5.1.0",
+    "@angular/material": "^5.0.4",
     "@angular/platform-browser": "^5.1.0",
     "@angular/platform-browser-dynamic": "^5.1.0",
     "@angular/router": "^5.1.0",
