--- a/webapp/manager/package.json
+++ b/webapp/manager/package.json
@@ -25,8 +25,10 @@
     "@angular/platform-browser": "^5.1.0",
     "@angular/platform-browser-dynamic": "^5.1.0",
     "@angular/router": "^5.1.0",
+    "@ng-bootstrap/ng-bootstrap": "^1.0.2",
     "core-js": "^2.4.1",
     "hammerjs": "^2.0.8",
+    "material-design-icons": "^3.0.1",
     "rxjs": "^5.5.2",
     "zone.js": "^0.8.19"
   },
